--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LibraryManagement"
         tools:targetApi="31">
+        <activity
+            android:name=".XemThongTinBookActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ListViewSachActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SQLserverJAVA"
+            android:exported="false" />
+        <activity
+            android:name=".GiaoDienBanDocActivity"
+            android:exported="false" />
         <activity
             android:name=".XemThongTinSachActivity"
             android:exported="false" />
@@ -25,7 +39,7 @@
             android:name=".NhapMuonSachActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Logins"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +47,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
